-- 2023.03.28 - V4.0.4

- fix: Table generation problems because of lastseen default value

-- 2023.03.26 - V4.0.3

- feat: Add proper MySQL error logging to keep track of queries
- fix: Save query problems at some table, which block full save mechanism
- fix: Point modifications show new poont instead of old (#155)
- fix: AutPurge - LVLBase wrong column name to check date
- fix: AutoPurge - LVLBase error if module not used

-- 2023.03.25 - V4.0.2

- fix: Console warnings about missing keys

-- 2023.03.25 - V4.0.1

- feat: Initiated API
- remove: Removed scoreboard ranks (read release description)

-- 2023.03.24 - V4.0.0

- feat: Scoreboard premier point support
- feat: Auto delete inactive player data from db (day based settings)
- feat: Scoreboard mm rank support
- feat: Scoreboard country clantag addon
- feat: Player mute point messages for themselves (!togglepointmsg)
- feat: Possibility to hide permission based tags (!toggletag)
- fix: Possibly fix player count based bug
- fix: MySQL crash problem by @daffyy

-- 2023.03.08 - V3.3.10

- fix: RoundEndPoints duplicated print amount (visual bug)
- fix: Possible fix for the log about Entity is not valid (bug since last week)
- fix: Possible fix for time not saved properly
- fix: Not enough players print bug
- fix: Scoreboard rank not getting synced instantly

-- 2023.02.13 - V3.3.9

- refactor: Disable MySQL pooling limitations
- refactor: Remove load repetative code
- refactor: Offline MySQL reader to some places (use the connections less)
- fix: MySQL connection is closed before data read
- fix: Round start message printed twice or more
- fix: Points not always saved properly (one symbol miss-typo, so sorry...)
- fix: On some servers the plugin stay in LOADING state (rare bug)
- fix: Duplicated point messages (rare bug)
- chore: Rename outdated translations to .outdated

-- 2023.02.13 - V3.3.8

- refactor: New global cache has been added
- fix: MySQL connection pool adjust was unable to run